# EnrichRAG

./: .env.example  .gitignore  Makefile  README.md  TODO.md  UI-test.md  download_link.md  main.py  package.md  problems.md  pyproject.toml
docs/: deployment.md  desktop_issues_0320.md  mobile_issues_0320.md  rag-advancement-and-agent-research.md  ui-issues-0320.md
enrichrag/: __init__.py  auth_store.py  cli.py  logging.py  settings.py
enrichrag/api/: app.py  models.py  routes.py
enrichrag/core/: __init__.py  chat_context.py  enrich.py  enricher.py  extraction_cache.py  gene_validation.py  graph_builder.py  integrate.py  pipeline.py  pubmed.py  query_planner.py  relation_extractor.py  web_search.py
enrichrag/enrichment/: __init__.py  go.py  kegg.py
enrichrag/knowledge_graph/: __init__.py  base.py  build_gene_map.py  downloaders.py  kegg_normalizer.py  knowledge_graph.py  loader.py  progress.py  pubtator_normalizer.py  reactome_normalizer.py  relation_taxonomy.py  rich_progress.py  string_normalizer.py
enrichrag/prompts/: __init__.py  generator.py
enrichrag/schema/: enrichment.py
enrichrag/static/: index.html  index_ui_refactor.html
examples/: minimal_enrich_test.py  smoke_enrich.py
frontend/: index.html  package-lock.json  package.json
frontend-vue/: tsconfig.json  vite.config.ts
frontend-vue/src/: env.d.ts  main.ts  router.ts  styles.css  types.ts
frontend/src/: env.d.ts  (+2 more)
tests/: object.md  test_auth_store.py  test_cli.py  test_gene_validation.py  test_imports.py  test_knowledge_graph.py  test_pipeline_eval.py  test_relation_extractor.py
(+85 files in other folders)
