[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enrichrag"
version = "0.1.0"
description = "Literature-augmented gene set enrichment framework"
requires-python = ">=3.10"

dependencies = [
  "gseapy",
  "pandas",
  "numpy",
  "scipy",
  "langchain-core",
  "langchain-community",
  "langchain-openai",
  "python-dotenv",
  "tabulate",
  "networkx",
  "seaborn",
  "biopython",
  "langchain-tavily>=0.2.17",
  "fastapi>=0.115",
  "uvicorn[standard]",
  "typer>=0.9",
  "pydantic-settings>=2.0",
  "loguru",
]

[project.scripts]
enrichrag = "enrichrag.cli:app"

[project.optional-dependencies]
dev = [
  "ipykernel",
  "jupyterlab",
  "notebook",
  "ruff",
  "pytest",
]

viz = [
  "matplotlib",
  "seaborn",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
